<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/item_layout"
        android:layout_height="match_parent">
        android:orientation="horizontal">



            <TextView
                android:id="@+id/champion_name"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/champion_name"
                android:textAlignment="center"
                android:background="@color/purple_200"/>

            <TextView
                android:id="@+id/champion_title"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/champion_title"
                android:textAlignment="center"
                android:background="@color/purple_200"/>

            <TextView
                android:id="@+id/champion_tag"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/champion_tag"
                android:textAlignment="center"
                android:background="@color/purple_200"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>